# naimai

./: .gitignore  README.md  classifiers.py  data_sqlite.py  decorators.py  dispatcher.py  gcloud.py  processing.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  utils.py  utils_old.py
.github/workflows/: workflow.yml
constants/: fields.py  models.py  nlp.py  paths.py  regex.py  replacements.py
crawlers/: arxiv_crawler.py  biorxiv_crawler.py  doij_crawler.py  egu_crawler.py  hal_crawler.py  iahr_crawler.py  issn_crawler.py  iwa_crawler.py  pubmed_crawler.py  scholar_crawler.py  ssrn_crawler.py
data_constructors/: omr_classif_data.py
data_queriers/: base.py  custom_querier.py  sqlite_manager.py  with_keywords.py  with_semantics.py
models/papers_classification/: obj_classifier.py  omr_review_classifier.py  semantic_search.py  tfidf.py
models/text_generation/: clauses_processing.py  direct2reported.py  paper2reported.py  query2review.py  query_generation.py
naimai/: decorators.py  processing.py
naimai/constants/: fields.py  models.py
naimai/crawlers/: egu_crawler.py  hal_crawler.py  iahr_crawler.py  pubmed_crawler.py  ssrn_crawler.py
naimai/data_constructors/: omr_classif_data.py
naimai/data_queriers/: sqlite_manager.py  with_keywords.py
naimai/models/: abbreviation.py
papers/: arxiv.py  covid_preprints.py  elsevier.py  issn.py  pdf_paper.py  raw.py
pipelines/: custom_querier.py  dispatcher.py  main_pipeline.py  producers.py  querier.py  review_pipeline.py  zones.py
utils/: general.py  pdf_spliter.py  regex.py  transformers.py
(+57 files in other folders)
