[metadata]
name = naimai
version = 1.0.0
author=  Yassine Kaddi
author_email = yassine@naimai.fr
description = A package to help with scientific literature research.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Yassine Kaddi
maintainer_email = yassine@naimai.fr
license = CC BY-NC-SA
keywords = ['science', 'review','bibliography','python','nlp','machine-learning','information-extraction']
url = https://github.com/yassinekdi/naimai
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Operating System :: OS Independent
package_dir = naimai
packages = ['naimai',]